<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="Maps" />

    <item
        android:id="@+id/navigation_graphs"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_graphs" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id = "@+id/navigation_ble"
        android:icon = "@drawable/ic_ble"
        android:title = "BlueTooth" />

</menu>
